# dit

./: README.md
.github/workflows/: github_pages.yaml  pages.yaml  test_linux.yaml  test_project.yaml  test_windows.yaml
cli/: Cargo.toml
cli/src/: lib.rs  main.rs
core/: Cargo.toml
core/src/: lib.rs  peer.rs
dit/: Cargo.toml
dit-core/: Cargo.toml
dit-core/src/: daemon.rs  lib.rs  peer copy.rs  peer.rs  store.rs
dit-core/src/peer/: proto.rs  store.rs  types.rs
dit/src/: lib.rs
