[package]
name = "dit-core"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["net", "sync", "macros", "io-util"] }
tokio-util = { version = "0.7", features = ["codec"] }
serde = { version = "1", features = ["derive"] }
bytes = "1"
futures-util = "0.3"
ring = "0.16"
tracing = "0.1"
